[metadata]
# license_file = LICENSE
name = powpow
author = Blazej Michalik
author_email = code.mrmino@gmail.com
description = Unix-style utilities for Python shell
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/MrMino/powpow
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    powpow
python_requires = >=3.6
include_package_data = True
